--- a/app/src/main/res/layout/tag_tile.xml
+++ b/app/src/main/res/layout/tag_tile.xml
@@ -7,6 +7,7 @@
 
 
     <android.support.v7.widget.CardView
+        android:layout_margin="7dp"
         android:id="@+id/card_view"
         card_view:cardUseCompatPadding="true"
         android:layout_gravity="center"
@@ -14,17 +15,21 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
-            android:orientation="vertical"
+            android:padding="8dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
-
-
+            <FrameLayout
+                android:id="@+id/tagColor"
+                android:layout_margin="5dp"
+                android:layout_gravity="center"
+                android:background="@drawable/circle"
+                android:layout_width="20dp"
+                android:layout_height="20dp"></FrameLayout>
             <TextView
                 android:maxLines="1"
                 android:textSize="15sp"
                 android:ellipsize="end"
                 android:padding="10dp"
-                android:paddingBottom="10dp"
                 android:layout_gravity="bottom"
                 android:textColor="#af000000"
                 android:text="Hello world"
@@ -32,10 +37,6 @@
                 android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
-            <lc.bookapp.TagList
-                android:id="@+id/tagContainer"
-                android:layout_width="fill_parent"
-                android:layout_height="30dp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
