Added nested location support

--- a/app/src/main/res/layout/fragment_character_basic.xml
+++ b/app/src/main/res/layout/fragment_character_basic.xml
@@ -6,6 +6,8 @@
     tools:context="lc.bookapp.fragments.CharacterBasicFragment">
 
     <LinearLayout
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
