--- a/app/src/main/res/layout/location_tile.xml
+++ b/app/src/main/res/layout/location_tile.xml
@@ -48,16 +48,10 @@
                     android:paddingRight="10dp"
                     android:ellipsize="end"
                     android:singleLine="true"
-                    android:id="@+id/height"
+                    android:id="@+id/size"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content" />
             </LinearLayout>
-            <lc.bookapp.TagList
-                android:layout_gravity="bottom"
-                android:layout_marginBottom="10dp"
-                android:id="@+id/tagContainer"
-                android:layout_width="fill_parent"
-                android:layout_height="15dp" />
         </FrameLayout>
 
     </android.support.v7.widget.CardView>
