--- a/app/src/main/res/layout/tag_tile.xml
+++ b/app/src/main/res/layout/tag_tile.xml
@@ -7,7 +7,10 @@
 
 
     <android.support.v7.widget.CardView
-        android:layout_margin="7dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         android:id="@+id/card_view"
         card_view:cardUseCompatPadding="true"
         android:layout_gravity="center"
@@ -15,6 +18,7 @@
         android:layout_height="wrap_content">
 
         <LinearLayout
+
             android:padding="8dp"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">
@@ -26,6 +30,7 @@
                 android:layout_width="20dp"
                 android:layout_height="20dp"></FrameLayout>
             <TextView
+                android:layout_weight="1"
                 android:maxLines="1"
                 android:textSize="15sp"
                 android:ellipsize="end"
@@ -37,6 +42,12 @@
                 android:id="@+id/name"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
+            <ImageView
+                android:layout_gravity="center"
+                android:id="@+id/delete"
+                android:src="@drawable/ic_delete"
+                android:layout_width="30dp"
+                android:layout_height="30dp" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
