--- a/app/src/main/res/menu/menu_character.xml
+++ b/app/src/main/res/menu/menu_character.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context="lc.bookapp.CharacterActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/delete" android:title="Delete"
+        android:orderInCategory="100" app:showAsAction="ifRoom" android:icon="@drawable/ic_delete_white" />
 </menu>
