--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -36,6 +36,17 @@
             </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/locationHeader"
+            android:layout_marginTop="15dp"
+            android:textAlignment="center"
+            android:textSize="9pt"
+            android:text="LOCATIONS"
+            android:padding="5dp"
+            android:textColor="@color/brandDark"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
         <GridView
             android:layout_margin="15dp"
             xmlns:android="http://schemas.android.com/apk/res/android"
