Fixed consistency issues and added slide to go back in location activity

--- a/app/src/main/res/layout/new_char_dialog.xml
+++ b/app/src/main/res/layout/new_char_dialog.xml
@@ -5,7 +5,7 @@
     android:minWidth="300dp"
     android:layout_height="wrap_content">
     <ImageView
-        android:src="@drawable/ic_action_book"
+        android:src="@drawable/ic_social_person"
         android:layout_width="fill_parent"
         android:layout_height="130dp" />
     <TextView
